<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/from_packages"
        android:text="@string/from_packages"
        android:textSize="14sp"
        android:textColor="#696969"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/sms_from_packages"
        android:textSize="22sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="@id/from_packages"
        app:layout_constraintRight_toRightOf="@id/from_packages"
        app:layout_constraintTop_toBottomOf="@id/from_packages"
        />

    <TextView
        android:id="@+id/sms_packages"
        android:text="@string/sms"
        android:textSize="14sp"
        android:textColor="#696969"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="@id/from_packages"
        app:layout_constraintRight_toRightOf="@id/from_packages"
        app:layout_constraintTop_toBottomOf="@id/sms_from_packages"
        />

    <TextView
        android:id="@+id/from_friends"
        android:text="@string/from_friends"
        android:textSize="14sp"
        android:textColor="#696969"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/sms_from_friends"
        android:textSize="22sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="@id/from_friends"
        app:layout_constraintRight_toRightOf="@id/from_friends"
        app:layout_constraintTop_toBottomOf="@id/from_friends"
        />

    <TextView
        android:id="@+id/sms_friends"
        android:text="@string/sms"
        android:textSize="14sp"
        android:textColor="#696969"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="@id/from_friends"
        app:layout_constraintRight_toRightOf="@id/from_friends"
        app:layout_constraintTop_toBottomOf="@id/sms_from_friends"
        />

    <ScrollView
        android:id="@+id/scroll_active_packages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:background="#efefef"
        >
        <LinearLayout
            android:id="@+id/packages_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >


            <android.support.constraint.ConstraintLayout
                android:id="@+id/add"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:background="#ffffff">

                <ImageView
                    android:id="@+id/add_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_package"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>

