<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gr.aueb.softeng.project1805.ui.Home"
    tools:showIn="@layout/app_bar_packages"
    android:id="@+id/scroll_packages"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/data_packages_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:paddingBottom="15sp"
            android:background="@drawable/packages_layout_borders"
            >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/data_view"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/data"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:text="@string/Data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:paddingStart="10sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/talktime_packages_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:paddingBottom="15sp"
            android:background="@drawable/packages_layout_borders"
            >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/talktime_view"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/talktime"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:text="@string/talktime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:paddingStart="10sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sms_packages_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:paddingBottom="15sp"
            android:background="@drawable/packages_layout_borders"
            >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/sms_view"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/sms"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:text="@string/sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:paddingStart="10sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

