<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateActivity">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gr.aueb.softeng.project1805.ui.UpdateActivity"
    tools:showIn="@layout/activity_update"

    >
    <TextView
        android:id="@+id/data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="220dp"
        android:text="@string/DATA"
        android:textSize="16dp"
        android:textColor="@color/blue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditTextHintTransfer"
        android:id="@+id/input_data_quantity_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:titleTextColor="@color/blue"
        app:subtitleTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/data_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorEnabled="true"
        >
        <EditText android:id="@+id/input_dataquantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:hint="@string/MB" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_data_update"
        android:theme="@style/PrimaryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_data_quantity_widget"
        android:textColor="@color/white"

        android:text="Ενημέρωση DATA"/>
    <View
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@id/btn_data_update"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/talktime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="220dp"
        android:text="@string/minutes"
        android:textSize="16dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditTextHintTransfer"
        android:id="@+id/input_talktime_quantity_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:titleTextColor="@color/blue"
        app:subtitleTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/talktime_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorEnabled="true"
        >
        <EditText android:id="@+id/input_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:hint="Χρόνος Ομιλίας" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditTextHintTransfer"
        android:id="@+id/input_calledphone_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:titleTextColor="@color/blue"
        app:subtitleTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/input_talktime_quantity_widget"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorEnabled="true"
        >
        <EditText android:id="@+id/input_calledphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:hint="Αριθμός" />


    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_talktime_update"
        android:theme="@style/PrimaryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_calledphone_widget"
        android:textColor="@color/white"

        android:text="Ενημέρωση Ομιλιας"/>
    <View
        android:id="@+id/separator2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@id/btn_talktime_update"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/sms_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="220dp"
        android:text="@string/sms"
        android:textSize="16dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditTextHintTransfer"
        android:id="@+id/input_receiverphone_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        app:titleTextColor="@color/blue"
        app:subtitleTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/sms_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorEnabled="true"
        >
    <EditText android:id="@+id/input_receiverphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        android:hint="Αριθμός" />

    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_sms_update"
        android:theme="@style/PrimaryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_receiverphone_widget"
        android:textColor="@color/white"

        android:text="Ενημέρωση SMS"/>

</android.support.constraint.ConstraintLayout>

</ScrollView>

